2010-03-11  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=35905
        REGRESSION(55699?): media/video-no-autoplay.html times out on Leopard Commit Bot

        Make sure we reset the WebGL preference, so that WebGL doesn't get left
        on after being enabled via layoutTestController.overridePreference(),
        which in turn causes accelerated compositing to be enabled on Leopard
        when we don't want it to be.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues):

Canonical link: https://commits.webkit.org/47152@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55857 268f45cc-cd09-0410-ab3c-d52691b4dbfc